--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -2,7 +2,7 @@ name: Docker Build
 
 on:
   workflow_run:
-    workflows: ["testing", "linting"]
+    workflows: ["python_linting_testing", "react_flow_linting_testing"]
     types:
       - completed
 
