--- a/.github/workflows/python_linting_testing.yml
+++ b/.github/workflows/python_linting_testing.yml
@@ -18,6 +18,23 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pylint
+          pip install pytest
+          pip install pytest-cov
           pip install -r requirements.txt
+      
+      # linting
       - name: Analysing the code with pylint
         run: pylint $(git ls-files '*.py')
+
+      # testing
+      - name: Running the tests with coverage
+        run: pytest --cov=.
+      - name: Report coverage
+        run: |
+          coverage report --fail-under=80
+          coverage xml
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: coverage.xml
+
