--- a/webAleaBack/Dockerfile
+++ b/webAleaBack/Dockerfile
@@ -10,11 +10,11 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY webAleaBack $APP_HOME/webAleaBack
+# copy project
+COPY . .
 
 # Expose port here
 EXPOSE 8000
 
 # run the backend server
-WORKDIR /app/webAleaBack
 CMD ["uvicorn", "main:webAleaBack", "--host", "0.0.0.0", "--port", "8000"]
