--- a/.github/workflows/python_linting_testing.yml
+++ b/.github/workflows/python_linting_testing.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
@@ -15,6 +15,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
+        working-directory: webAleaBack
         run: |
           python -m pip install --upgrade pip
           pip install pylint
@@ -24,17 +25,20 @@ jobs:
       
       # linting
       - name: Analysing the code with pylint
+        working-directory: webAleaBack
         run: pylint $(git ls-files '*.py')
 
       # testing
       - name: Running the tests with coverage
+        working-directory: webAleaBack
         run: pytest --cov=.
       - name: Report coverage
+        working-directory: webAleaBack
         run: |
           coverage report --fail-under=80
           coverage xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
-          files: coverage.xml
+          files: webAleaBack/coverage.xml
 
