--- a/webAleaBack/Dockerfile
+++ b/webAleaBack/Dockerfile
@@ -1,5 +1,4 @@
-FROM python:3.13-slim
-
+FROM continuumio/miniconda3:latest
 
 # set env variable here
 ENV PYTHONUNBUFFERED 1
@@ -7,8 +6,10 @@ ENV APP_HOME /app
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY environment.yml .
+
+# create conda environment
+RUN conda env create -f environment.yml
 
 # copy project
 COPY . .
@@ -17,4 +18,4 @@ COPY . .
 EXPOSE 8000
 
 # run the backend server
-CMD ["uvicorn", "main:webAleaBack", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["conda", "run", "-n", "webalea_env", "uvicorn", "main:webAleaBack", "--host", "0.0.0.0", "--port", "8000"]
