--- a/webAleaFront/package.json
+++ b/webAleaFront/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.4",
+    "@mui/x-tree-view": "^8.14.0",
     "@xyflow/react": "^12.8.6",
     "bootstrap": "^5.3.8",
     "node": "^24.9.0",
