--- a/webAleaFront/package.json
+++ b/webAleaFront/package.json
@@ -15,7 +15,8 @@
     "node": "^24.9.0",
     "npm": "^11.6.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
