--- a/webAleaFront/package.json
+++ b/webAleaFront/package.json
@@ -23,14 +23,16 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
+    "@eslint/js": "^9.39.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
-    "eslint": "^9.33.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
+    "globals": "^16.5.0",
+    "typescript-eslint": "^8.46.4",
     "vite": "^7.1.7"
   }
 }
