--- a/.github/workflows/react_linting_testing.yml
+++ b/.github/workflows/react_linting_testing.yml
@@ -17,7 +17,6 @@ jobs:
         working-directory: webAleaFront
         run: |
           echo "Node $(node -v) npm $(npm -v)"
-          ls -la
           if [ -f package-lock.json ]; then
             echo "Found package-lock.json, running npm ci"
             npm ci
@@ -34,7 +33,8 @@ jobs:
       # testing
       - name: Run tests with coverage
         working-directory: webAleaFront
-        run: npm test -- --coverage --watchAll=false
+        run: |
+          npm run test -- --coverage --watchAll=false
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
