--- a/.github/workflows/react_linting_testing.yml
+++ b/.github/workflows/react_linting_testing.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Run tests with coverage
         working-directory: webAleaFront
         run: |
+          npm run
           npm run test -- --coverage --watchAll=false
 
       - name: Upload coverage to Codecov
