Revert "Merge branch 'develop' into features/front/design"
This reverts commit 26f5ca7ef2a2fbda6a3878fd46862de97a2c7d95, reversing
changes made to c5a6743fa08d5e19cce4633c6c32ff5cc875b39c.

--- a/.github/workflows/react_linting_testing.yml
+++ b/.github/workflows/react_linting_testing.yml
@@ -15,15 +15,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: webAleaFront
-        run: |
-          echo "Node $(node -v) npm $(npm -v)"
-          if [ -f package-lock.json ]; then
-            echo "Found package-lock.json, running npm ci"
-            npm ci
-          else
-            echo "No package-lock.json found, running npm install instead"
-            npm install
-          fi
+        run: npm ci
 
       # linting
       - name: Run ESLint
@@ -33,7 +25,7 @@ jobs:
       # testing
       - name: Run tests with coverage
         working-directory: webAleaFront
-        run: npx vitest run --coverage
+        run: npm test -- --coverage --watchAll=false
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
