--- a/webAleaFront/package.json
+++ b/webAleaFront/package.json
@@ -19,6 +19,7 @@
     "node": "^24.9.0",
     "npm": "^11.6.1",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0"
   },
