added tests for conda module

--- a/.github/workflows/python_linting_testing.yml
+++ b/.github/workflows/python_linting_testing.yml
@@ -31,7 +31,8 @@ jobs:
       # testing
       - name: Running the tests with coverage
         working-directory: webAleaBack
-        run: pytest --cov=.
+        # run pytest with config file pytest.ini
+        run: pytest -c pytest.ini
       - name: Report coverage
         working-directory: webAleaBack
         run: |
