--- a/webAleaBack/tests/environment.yml
+++ b/webAleaBack/tests/environment.yml
@@ -1,4 +1,4 @@
-name: webalea_env
+name: test_env
 channels:
   - conda-forge
   - openalea3
@@ -11,3 +11,8 @@ dependencies:
   - pydantic-settings
   - aiofiles
   - packaging
+  - pytest
+  - pytest-cov
+  - pylint
+  - coverage
+  - codecov
