--- a/.github/workflows/python_linting_testing.yml
+++ b/.github/workflows/python_linting_testing.yml
@@ -16,7 +16,8 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-        
+      
+      # conda setup
       - name: setup conda test environment
         uses: conda-incubator/setup-miniconda@v3
         with:
@@ -28,6 +29,11 @@ jobs:
       - name: activate conda environment
         run: |
           conda activate test_env
+      
+      # Install dependencies for linting and testing
+      - name: Install testing and linting dependencies
+        run: |
+          pip install pylint pytest pytest-cov coverage codecov
 
       # linting
       - name: Analysing the code with pylint
