added test for manager .py

--- a/webAleaBack/pytest.ini
+++ b/webAleaBack/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 minversion = 7.0
-addopts = --strict-markers --cov=. --cov-fail-under=80 -q --ignore=__init__.py
+addopts = --strict-markers --cov=. --cov-fail-under=80 -q --ignore=**/__init__.py
 testpaths = tests
 python_files = test_*.py
 filterwarnings =
