--- a/webAleaFront/Dockerfile
+++ b/webAleaFront/Dockerfile
@@ -9,6 +9,7 @@ COPY . .
 RUN npm install 
 RUN npm run build
 RUN npm install -g serve
+RUN npm run test:all
 
 EXPOSE 3000
 CMD ["serve", "-s", "dist", "-l", "3000"]
