--- a/.github/workflows/react_linting_testing.yml
+++ b/.github/workflows/react_linting_testing.yml
@@ -25,7 +25,7 @@ jobs:
       # testing
       - name: Run tests with coverage
         working-directory: webAleaFront
-        run: npm test -- --coverage --watchAll=false
+        run: npm run test:all
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
