--- a/webAleaBack/pytest.ini
+++ b/webAleaBack/pytest.ini
@@ -3,6 +3,7 @@ minversion = 7.0
 addopts = --strict-markers --cov=. --cov-fail-under=80 -q --ignore=**/__init__.py
 testpaths = tests
 python_files = test_*.py
+pythonpath = .
 filterwarnings =
     ignore::DeprecationWarning
 log_cli = true
