--- a/webAleaBack/Dockerfile
+++ b/webAleaBack/Dockerfile
@@ -1,4 +1,4 @@
-FROM continuumio/miniconda3:latest
+FROM continuumio/miniconda3:22.11.1
 
 # set env variable here
 ENV PYTHONUNBUFFERED 1
@@ -19,9 +19,9 @@ COPY . .
 EXPOSE 8000
 
 # ensure channels are present in base conda config
-RUN conda config -n webalea_env --add channels conda-forge && \
-    conda config -n webalea_env --add channels openalea3 && \
-    conda config -n webalea_env --add channels defaults
+# RUN conda config -n webalea_env --add channels conda-forge && \
+#     conda config -n webalea_env --add channels openalea3 && \
+#     conda config -n webalea_env --add channels defaults
 
 # run the backend server
 CMD ["conda", "run", "-n", "webalea_env", "uvicorn", "main:webAleaBack", "--host", "0.0.0.0", "--port", "8000"]
