--- a/.github/workflows/react_linting_testing.yml
+++ b/.github/workflows/react_linting_testing.yml
@@ -19,12 +19,14 @@ jobs:
 
       # linting
       - name: Run ESLint
+        id: lint
         working-directory: webAleaFront
         run: npx eslint . --ext .js,.jsx,.ts,.tsx
         continue-on-error: true
 
       # testing
       - name: Run tests with coverage
+        id: test
         working-directory: webAleaFront
         run: npm run test:all
         continue-on-error: true
@@ -36,4 +38,10 @@ jobs:
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: true
-        continue-on-error: true
+
+      - name: Fail job if lint or tests failed
+        run: |
+          if [[ "${{ steps.lint.outcome }}" == "failure" ]] || [[ "${{ steps.test.outcome }}" == "failure" ]]; then
+            echo "ESLint or tests failed!"
+            exit 1
+          fi
