--- a/.github/workflows/react_linting_testing.yml
+++ b/.github/workflows/react_linting_testing.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: webAleaFront
-        run: npm ci
+        run: npm install
 
       # linting
       - name: Run ESLint
