implementation tests for : - fetch installed openalea packages - fetch wralea packages - fetch package nodes

--- a/webAleaBack/tests/.env
+++ b/webAleaBack/tests/.env
@@ -1,1 +1,5 @@
 TEST_ENV_NAME=webalea_test_env
+EXISTING_PACKAGE=openalea.astk
+INSTALLED_PACKAGE=openalea.astk
+PACKAGE_DESCRIPTION_FILE=tests/resources/conda/openalea.astk_description.json
+list_wralea_packages_file=tests/resources/conda/list_wralea_packages.json
