Create docker volume + Docker volume for env conda

--- a/webAleaBack/Dockerfile
+++ b/webAleaBack/Dockerfile
@@ -10,7 +10,19 @@ WORKDIR /app
 COPY environment.yml .
 
 # create conda environment
-RUN conda env create -f environment.yml
+RUN echo '#!/bin/bash\n\
+set -e\n\
+\n\
+# if env conda already exists\n\
+if [ ! -d "/opt/conda/envs/webalea_env/bin" ]; then\n\
+  echo "Creating conda environment..."\n\
+  conda env create -f /app/environment.yml\n\
+else\n\
+  echo "Conda environment already exists."\n\
+fi\n\
+\n\
+# Execute command\n\
+exec "$@"' > /entrypoint.sh && chmod +x /entrypoint.sh
 
 # copy project
 COPY . .
@@ -18,5 +30,6 @@ COPY . .
 # Expose port here
 EXPOSE 8000
 
+ENTRYPOINT ["/entrypoint.sh"]
 # run the backend server
 CMD ["conda", "run", "-n", "webalea_env", "uvicorn", "main:webAleaBack", "--host", "0.0.0.0", "--port", "8000"]
