--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "8000:8000"
     environment:
       - APP_HOME=/app
+    volumes:
+      - conda_env:/opt/conda
     networks:
       - webalea-network
 
@@ -22,3 +24,6 @@ services:
 networks:
   webalea-network:
     driver: bridge
+
+volumes:
+  conda_env:
