--- a/webAleaFront/.env
+++ b/webAleaFront/.env
@@ -1,3 +1,4 @@
 VITE_API_BASE_URL_MANAGER=http://localhost:8000/api/v1/manager
 VITE_API_BASE_URL_INSPECTOR=http://localhost:8000/api/v1/inspector
 VITE_API_BASE_URL_RUNNER=http://localhost:8000/api/v1/runner
+VITE_API_BASE_URL_VISUALIZER=http://localhost:8000/api/v1/visualizer
