--- a/webAleaFront/package.json
+++ b/webAleaFront/package.json
@@ -29,7 +29,8 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
