Test fix javascript generating doc

--- a/webAleaFront/tsconfig.json
+++ b/webAleaFront/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "checkJs": false
+    "checkJs": false,
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "types": ["react"]
   },
-  "files": ["src/index.js"],
   "include": ["src/**/*"]
 }
 
