--- a/webAleaFront/package.json
+++ b/webAleaFront/package.json
@@ -52,6 +52,8 @@
     "globals": "^16.5.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "tsx": "^4.15.8",
+    "typedoc": "^0.25.13",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.1.7"
   }
