update launch operation (waiting for backend before anything)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,22 @@ services:
       - APP_HOME=/app
     volumes:
       - conda_env:/opt/conda
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "conda",
+          "run",
+          "-n",
+          "webalea_env",
+          "python",
+          "-c",
+          "import urllib.request,sys; urllib.request.urlopen('http://localhost:8000/health', timeout=2); sys.exit(0)"
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 20
+      start_period: 120s
     networks:
       - webalea-network
 
@@ -18,6 +34,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    depends_on:
+      backend:
+        condition: service_healthy
     networks:
       - webalea-network
 
